--- a/src/components/shared/Address/address.scss
+++ b/src/components/shared/Address/address.scss
@@ -25,3 +25,15 @@
         padding: 6px 16px;
     }
 }
+
+// For mobile device
+@media (max-width: $mediaTabMax) {
+    .addressWrap {
+        flex-direction: column;
+        align-items: flex-start;
+        &_area {
+            max-width: 100%;
+            margin-bottom: $margin;
+        }
+    }
+}
