feature/multilingual: english and hindi language suport added

--- a/src/components/shared/Footer/footer.scss
+++ b/src/components/shared/Footer/footer.scss
@@ -4,10 +4,11 @@
     background: $black-343A40;
     padding: $padding;
     margin-top: 4rem;
-    &_content{
+    &_content {
         @include sectionWidth;
     }
     &_text {
         color: $grey-bbb;
+        margin: 0;
     }
 }
