--- a/src/components/shared/FormFields/form.scss
+++ b/src/components/shared/FormFields/form.scss
@@ -10,4 +10,8 @@
         font-size: 1.2rem;
         margin-bottom: $margin;
     }
+    &_loader {
+        width: 60px;
+        height: 60px;
+    }
 }
