--- a/src/components/shared/ProductItem/productItem.scss
+++ b/src/components/shared/ProductItem/productItem.scss
@@ -7,6 +7,10 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        img.product-item-loader {
+            width: 60px;
+            height: 50px;
+        }
     }
     &-img {
         min-height: 200px;
@@ -25,9 +29,5 @@
         font-weight: bold;
         margin: 0;
         color: $primary-color;
-    }
-    &-loader {
-        width: 50px;
-        height: 50px;
     }
 }
