Implement Address management

--- a/src/components/pages/Account/account.scss
+++ b/src/components/pages/Account/account.scss
@@ -110,8 +110,10 @@
             display: flex;
             &_label {
                 width: 150px;
+                font-weight: bold;
             }
             &_value {
+                
                 font-weight: 500;
             }
         }
