--- a/src/components/pages/Checkout/checkout.scss
+++ b/src/components/pages/Checkout/checkout.scss
@@ -25,15 +25,34 @@
 
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap;
         
         &_address{
             width: 400px;
+
         }
         &_cart{
             width: 440px;
             .cartDetail{
+          
                 position: static;
                 z-index: 0;
+                .cartDetail_top {
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    border-bottom: 1px solid $grey_ccc;
+                    padding-bottom: $paddingMd;
+                    font-weight: bold;
+                    &.amount {
+                        border-bottom: 0;
+                        border-top: 1px solid $grey_ccc;
+                        padding-top: $paddingMd;
+                        justify-content: space-around;
+                        font-size: 1.2rem;
+                        margin-top: $margin;
+                    }
+                }
             }
         }
 
@@ -43,6 +62,8 @@
 
     &_payment-btn{
         @include hyGenieBtn;
+        margin-top: 20px;
+        width: 100%;
     }
     
 }
