--- a/src/components/shared/QuantityControl/quantityControl.scss
+++ b/src/components/shared/QuantityControl/quantityControl.scss
@@ -1,6 +1,6 @@
 @import '../../shared/Style/index.scss';
 
-.quanity-control{
+.quantity-control{
     width: 110px;
     display: flex;
     justify-content: space-between;
