Change product data structure in product detail

--- a/src/components/pages/Account/orderHistory.scss
+++ b/src/components/pages/Account/orderHistory.scss
@@ -15,8 +15,15 @@
         &_products{
             &_item{
                 display: flex;
+                margin-top: 10px;
+                margin-bottom: 14px;
                 &_image{
                     max-width: 100px;
+                }
+
+                &_title{
+                    margin-left: 10px;
+                    font-weight: bold;
                 }
             }
         }
