--- a/src/components/pages/Account/orderHistory.scss
+++ b/src/components/pages/Account/orderHistory.scss
@@ -1,4 +1,14 @@
 .order-history{
+
+    &_empty-state{
+        display: flex ;
+        flex-direction: column;
+
+        &_image{
+            width: 400px;
+            opacity: 0.9;
+        }
+    }
     &_item{
         &_progress{
             max-width: 400px;
