--- a/src/components/pages/Home/home.scss
+++ b/src/components/pages/Home/home.scss
@@ -5,6 +5,8 @@
     position: relative;
     &_img {
         width: 100%;
+        max-width: 1600px;
+        margin: auto;
         display: block;
         height: 400px;
     }
