--- a/src/components/shared/Header/header.scss
+++ b/src/components/shared/Header/header.scss
@@ -198,6 +198,7 @@
         position: absolute;
         background: $white;
         right: 0;
+        top: 30px;
         width: 100%;
         min-width: 100px;
         &_list {
