--- a/src/components/pages/ProductListing/productListing.scss
+++ b/src/components/pages/ProductListing/productListing.scss
@@ -5,6 +5,12 @@
     margin-top: $topSpacing;
 
     &_header {
+
+        h3{
+            float: left;
+            font-size:18px;
+            font-weight: bold;
+        }
         p {
             margin-bottom: 16px;
         }
