Fix category search bug in products listing

--- a/src/components/pages/ProductListing/productListing.scss
+++ b/src/components/pages/ProductListing/productListing.scss
@@ -19,6 +19,26 @@
     &_section {
         margin-top: 40px;
         display: flex;
+
+        &_empty{
+            width: 100%;
+
+            &_content{
+                width: 100%;
+                max-width: 400px;
+                h3{
+                    font-size: 18px;
+                    font-weight: bold;
+                }
+                img{
+                    margin-top: 20px;
+
+                }
+            }
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
     }
 
     &_list {
