--- a/src/components/shared/Loaders/loaders.scss
+++ b/src/components/shared/Loaders/loaders.scss
@@ -38,3 +38,38 @@
         transform: rotate(360deg);
     }
 }
+
+@keyframes shimmer {
+    100% {
+        transform: translateX(100%);
+    }
+}
+
+// Skelton CSS
+.skeleton-box {
+    display: inline-block;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+    background-color: #dddbdd;
+    width: 100%;
+    max-width: 1600px;
+    &::after {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        transform: translateX(-100%);
+        background-image: linear-gradient(
+            90deg,
+            rgba(255, 255, 255, 0) 0,
+            rgba(255, 255, 255, 0.2) 20%,
+            rgba(255, 255, 255, 0.5) 60%,
+            rgba(255, 255, 255, 0)
+        );
+        -webkit-animation: shimmer 2s infinite;
+        animation: shimmer 1s infinite;
+        content: '';
+    }
+}
