feature/searchIcon: search added and some css fixes

--- a/src/components/pages/ProductDetail/productDetail.scss
+++ b/src/components/pages/ProductDetail/productDetail.scss
@@ -225,6 +225,7 @@
             width: 74%;
             height: auto;
             margin-left: 0;
+            max-height: 250px;
         }
         &_details {
             margin-left: 0;
