--- a/src/components/pages/Account/orderHistory.scss
+++ b/src/components/pages/Account/orderHistory.scss
@@ -37,8 +37,12 @@
                 display: flex;
                 margin-top: 10px;
                 margin-bottom: 14px;
+                a {
+                    min-width: 100px;
+                }
                 &_image {
                     max-width: 100px;
+                    max-height: 100px;
                 }
 
                 &_title {
