--- a/src/components/shared/Header/cart.scss
+++ b/src/components/shared/Header/cart.scss
@@ -83,6 +83,7 @@
         color: $black-333;
         font-weight: bold;
         width: 20%;
+        margin-top: 28px;
     }
     &_qty {
         padding: $paddingMd;
@@ -100,6 +101,9 @@
         &:hover {
             color: $primary-color;
         }
+        &.remove {
+            margin-top: 28px;
+        }
     }
     &_remove {
         width: 20%;
@@ -116,6 +120,27 @@
     .cartDetail {
         &.show {
             width: 100%;
+        }
+        &_content {
+            .cartItem {
+                padding: 12px 0;
+                &_text {
+                    font-size: 0.7rem;
+                }
+                &_btn {
+                    width: 25px;
+                    height: 25px;
+                    i {
+                        font-size: 0.8rem;
+                    }
+                    &.remove {
+                        margin-top: 28px;
+                    }
+                }
+                &_price {
+                    margin-top: 28px;
+                }
+            }
         }
     }
 }
