Make order history item products collapsible

--- a/src/components/pages/Account/orderHistory.scss
+++ b/src/components/pages/Account/orderHistory.scss
@@ -33,6 +33,8 @@
         }
 
         &_products {
+
+            margin-top: 20px;
             &_item {
                 display: flex;
                 margin-top: 10px;
