Change banner image object-fit property

--- a/src/components/pages/Home/home.scss
+++ b/src/components/pages/Home/home.scss
@@ -11,6 +11,7 @@
         margin: auto;
         display: block;
         height: 400px;
+        object-fit: cover;
     }
     &_content {
         position: absolute;
